--- a/springboot-microservice-jpa-billofmonth/pom.xml
+++ b/springboot-microservice-jpa-billofmonth/pom.xml
@@ -22,7 +22,7 @@
 	<dependencies>
         <dependency>
             <groupId>com.ntou</groupId>
-            <artifactId>common</artifactId>
+            <artifactId>springboot-microservice-jpa-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
